tests/functional/lang/eval-fail-all-2.err.exp
error:
       … while calling the 'all' builtin
         at /pwd/lang/eval-fail-all-2.nix:1:1:
            1| builtins.all (_: 1) "foo"
             | ^
            2|

       … while evaluating the second argument passed to builtins.all

       error: expected a list but found a string: "foo"
